@startuml
skinparam {
    monochrome true
    defaultFontName Sarabun
}

title State Machine Diagram ของ Course

<style>
mainframe {
    margin 50
}
</style>
mainframe CourseStatus

state "PENDING" as pending
state "OPEN" as open
state "FULL" as full
state "ACTIVE" as active
state "ENDED" as ended

[*] -down-> pending: สร้างคอร์ส
pending -> open: ณ วันและเวลาเปิดรับสมัคร
open -down-> full: ลูกค้าสมัครจนครบจำนวน
full -> active: ณ วันและเวลาเริ่มต้นคาบเรียนแรกของคอร์ส
open -> active: ณ วันและเวลาเริ่มต้นคาบเรียนแรกของคอร์ส
active -> ended: ลูกค้าทุกคนในคอร์สเรียนครบตามจำนวนครั้งที่คอร์สกำหนด
active -> ended: ณ วันและเวลาตามปฏิทิน 2 สัปดาห์\nหลังจากวันและเวลาเริ่มต้นคาบเรียนสุดท้ายของคอร์ส\n(2-week offset)
ended -down-> [*]

@enduml
